格式化调整

--- a/run.ipynb
+++ b/run.ipynb
@@ -8,11 +8,9 @@
    },
    "outputs": [],
    "source": [
-    "from sympy import init_printing\n",
     "from utils import algo_display, get_fun\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from IPython.core.interactiveshell import InteractiveShell"
+    "import numpy as np"
    ]
   },
   {
@@ -189,11 +187,11 @@
     }
    ],
    "source": [
-    "plt.figure(dpi=120)\n",
-    "plt.plot(delta_m, label=\"修正牛顿法\")\n",
-    "plt.plot(delta_S, label=\"拟牛顿法-SR1\")\n",
-    "plt.plot(delta_D, label=\"拟牛顿法-DFP\")\n",
-    "plt.plot(delta_B, label=\"拟牛顿法-BFGS\")\n",
+    "plt.figure(dpi = 120)\n",
+    "plt.plot(delta_m, label = \"修正牛顿法\")\n",
+    "plt.plot(delta_S, label = \"拟牛顿法-SR1\")\n",
+    "plt.plot(delta_D, label = \"拟牛顿法-DFP\")\n",
+    "plt.plot(delta_B, label = \"拟牛顿法-BFGS\")\n",
     "plt.legend()\n",
     "plt.ylim(0, 0.1)"
    ]
@@ -347,11 +345,11 @@
     }
    ],
    "source": [
-    "plt.figure(dpi=120)\n",
-    "plt.plot(delta_m, label=\"修正牛顿法\")\n",
-    "plt.plot(delta_S, label=\"拟牛顿法-SR1\")\n",
-    "plt.plot(delta_D, label=\"拟牛顿法-DFP\")\n",
-    "plt.plot(delta_B, label=\"拟牛顿法-BFGS\")\n",
+    "plt.figure(dpi = 120)\n",
+    "plt.plot(delta_m, label = \"修正牛顿法\")\n",
+    "plt.plot(delta_S, label = \"拟牛顿法-SR1\")\n",
+    "plt.plot(delta_D, label = \"拟牛顿法-DFP\")\n",
+    "plt.plot(delta_B, label = \"拟牛顿法-BFGS\")\n",
     "plt.legend()\n",
     "plt.ylim(0, 0.1)"
    ]
